--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter:2.6.5'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.5'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.5'
