--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,25 @@ plugins {
 
 group = 'com.tonacup'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter:2.6.5'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.6.6'
+	implementation 'org.springframework.boot:spring-boot-starter:2.6.6'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.6'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.6'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.6'
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0'
+
+	implementation 'org.springframework.boot:spring-boot-devtools:2.6.6'
+
+	compileOnly 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
+	runtimeOnly 'com.h2database:h2:2.1.210'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.6'
 }
 
